# RGL

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  booststrap.ps1  cmake_config.sh  cn.md  vcpkg-configuration.json  vcpkg.json
ECSTest/: CMakeLists.txt  DelegateTest.cpp  ECSTest.cpp  SignalTest.cpp  TestPFR.cpp
FindJavaTest/: CMakeLists.txt  CallJvm.cpp  JVMWrapper.cpp  JVMWrapper.hpp  JavaMain.java  ReflectJavaMain.java
JavaGUI/: settings.gradle
JavaGUI/app/: build.gradle
JavaGUI/app/src/main/java/rgl/gui/: AppMain.java
ShaderReflection/: CMakeLists.txt  main.cpp  shaderReflection.cpp  shaderReflection.hpp
ShaderReflection/scripts/: JsonMeta2Struct.py
ShaderReflection/scripts/templates/: shader_template.hpp.jinja
Test/: CMakeLists.txt  TestGIL.cpp  loadimg.ixx
api_abstractor/: CMakeLists.txt  api_types.hpp  api_types.ixx
app/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  CameraECS.cpp  CameraECS.hpp  ControlLogic.cpp  ControlLogic.hpp  ControllerECS.cpp  ControllerECS.hpp  DataPipeline.cpp  DataPipeline.hpp  EnttRegistry.cpp  EnttRegistry.hpp  README.md  RLApp.cpp  RLApp.hpp  SDLWindow.cpp  SDLWindow.hpp
assest/: grass_variations.glb  transparent.fbx
assets/: grass.glb  hatsune_miku_plushie.glb  transparent.glb
assets/bag/: source_attribution.txt
assets/hatsune_miku_plushie/: license.txt  scene.gltf
cmake/: FindClangFormat.cmake
configs/: log_level.json
entry/: CMakeLists.txt  main.cpp
front_end/: CMakeLists.txt  Camera.ixx  RLApp.ixx  SDLWindow.ixx  SRFramework.ixx
front_end/practices/: DynamicEffect.ixx  SoftwareRender.ixx
logger/: CMakeLists.txt  rllogger.cpp  rllogger.hpp
opengl_core/: CMakeLists.txt  Camera.ixx  ExecsiceCodes.ixx  GLCheckError.ixx  GLFramework.ixx  GLObj.ixx  GLTextures.ixx  Helpers.hpp  LoadShader.ixx  Shader.ixx  VertexDescriptor.hpp  glUniformWrapper.hpp
opengl_core/Practices/: DynamicEffect.ixx  StaticEffect.ixx
practices/: CMakeLists.txt  DynamicEffect.cpp  DynamicEffect.hpp  DynamicEffect.ixx  LightEffect.cpp  LightEffect.hpp  SoftwareRender.cpp  SoftwareRender.hpp  StaticEffect.cpp  StaticEffect.hpp  StaticEffect.ixx  ThreeDEffect.cpp  ThreeDEffect.hpp  ThreeDEffect.ixx
render_core/: CMakeLists.txt
render_core/app/: Camera.hpp  RLApp.hpp  SDLWindow.hpp
render_core/cpu/: CMakeLists.txt  SDLSurface.hpp  SRFramework.cpp  SRFramework.hpp
render_core/gl/: AABB.cpp  AABB.hpp  CMakeLists.txt  CameraUniformSystem.hpp  EnTTRelationship.cpp  EnTTRelationship.hpp  Entity.cpp  Entity.hpp  GLCheckError.cpp  GLCheckError.hpp  GLFramework.cpp  GLFramework.hpp  GLObj.cpp  GLObj.hpp  GLTextures.cpp  GLTextures.hpp  Geometry.cpp  Geometry.hpp  Helpers.hpp  InstanceComponent.cpp  InstanceComponent.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ModelImporter.cpp  ModelImporter.hpp  PhysicsSystem.hpp  ProgrammedTexture.cpp  ProgrammedTexture.hpp  RenderECS.hpp  RenderQueue.cpp  RenderQueue.hpp  RigidBody.hpp  SSBO.cpp  SSBO.hpp  Shader.cpp  Shader.hpp  (+6 more)
render_core/gl/light/: Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
render_core/practices/: ThreeDEffect.cpp
shaders/: CMakeLists.txt
shaders/Light/: ambient.frag  ambient.vert  blinn-phong-mask-ubo.frag  blinn-phong-mask.frag  blinn-phong.frag  grass-fragment.frag  phong.frag  phong.vert  phong_ubo.vert  phong_ubo_instanced.vert  poingtlight.frag  pointlight.frag  spotlight.frag  spotlight_ubo.frag  vertexBilnnPhong.vert  white.frag  white.vert
shaders/beginner/: BasicTransform.vert  Blend.frag  ControllerTransform.frag  ControllerTransform.vert  UniformColor.frag  UniformColor.vert  UniformTriangle.frag  UniformTriangle.vert  colorful.frag  moving.frag  moving.vert  movinguv.frag  movinguv.vert  outColor.vert  shader.frag  shader.vert  uvshader.vert  uvshaderMipmap.vert
software_renderer/: CMakeLists.txt  SRFramework.ixx
